# cpme-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  health.py  main.py  monitor.py  pyproject.toml  requirements.txt  setup.py  test_health.py  test_monitor.py  test_notifications.py  test_run.py
deploy/: Dockerfile  fly.toml
src/: __init__.py  config.py  health.py  monitor.py  notifications.py  scraper.py
tests/: __init__.py  test_health.py  test_monitor.py  test_notifications.py  test_run.py
